--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+<title>Lienken Technology Corporation 靈感科技股份有限公司</title>
+
+</head>
+<body>
+
+ hello, world
+</body>
+</html>
