--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 </head>
 <body>
 
- hello, world
+    <script>
+        /* Storing user's device details in a variable*/
+        let details = navigator.userAgent;
+  
+        /* Creating a regular expression 
+        containing some mobile devices keywords 
+        to search it in details string*/
+        let regexp = /android|iphone|kindle|ipad/i;
+  
+        /* Using test() method to search regexp in details
+        it returns boolean value*/
+        let isMobileDevice = regexp.test(details);
+  
+        if (isMobileDevice) {
+            location.href = "http://lungyingwang.github.io/mobile.html";
+        } else {
+		location.href = "http://lungyingwang.github.io/desktop.html";
+            /*document.write("You are using Desktop");*/
+        }
+    </script>
 </body>
 </html>
