--- a/desktop.html
+++ b/desktop.html
@@ -54,7 +54,7 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color: black; /*#777;*/
   padding: 10px;
   text-align: center;
   color: white;
