--- a/desktop.html
+++ b/desktop.html
@@ -54,10 +54,10 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: white; /*#777;*/
+  background-color: #666; /* #777; */
   padding: 10px;
   text-align: center;
-  color: black; /*white;*/
+  color: white;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
