--- a/mobile.html
+++ b/mobile.html
@@ -94,7 +94,7 @@ footer {
     <p> <iframe width="280" height="158" src="https://www.youtube.com/embed/1Bv1-nn_cd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
  
     <p>LIENKEN smart nano materials provide very thin and light soft shock absorbers.</p>
-<p>These materials can apply to smartphone case, sport pads, medical, defense, transportation safety, transportation, computers, automotives, insoles, helmet, 
+<p>These materials can apply to EV battery protector, smartphone case, sport pads, medical, defense, transportation safety, transportation, computers, automotives, insoles, helmet, 
     bicycle seat, acoustic and car electronics, etc.</p>
 <p>For inquiries and questions, please email: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a>
   
