--- a/mobile.html
+++ b/mobile.html
@@ -18,7 +18,7 @@ header {
   background-color: #666;
   padding: 2px;
   text-align: center;
-  font-size: 28px;
+  font-size: 20px; /* 28px */
   color: white;
 }
 
@@ -71,9 +71,9 @@ footer {
 </head>
 <body>
 
-<h3>Lienken Technology Corporation 靈感科技股份有限公司</h3>
+<h5>Lienken Technology Corporation 靈感科技股份有限公司</h5>
 <header>
-  <h3>Products</h3> 
+  <h5>Products</h5> 
 </header>
 
 <section>
@@ -86,7 +86,7 @@ footer {
   </nav>
   
   <article>
-<h3 id="material" >Shock-absorbing materials</h3>
+<h5 id="material" >Shock-absorbing materials</h5>
      <p> <a href="https://www.youtube.com/watch?v=M88DidFeX38&t=3s">Shock absorbing materials video-2, Hitting a watermelon with a hammer doesn't break it.</a>
      <p><iframe width="280" height="158" src="https://www.youtube.com/embed/M88DidFeX38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
@@ -98,7 +98,7 @@ footer {
     bicycle seat, acoustic and car electronics, etc.</p>
 <p>For inquiries and questions, please email: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a>
   
-  <h3 id="material2">Noise-reducing materials</h3>
+  <h5 id="material2">Noise-reducing materials</h5>
     
     <h3 id="info"> Company Info.</h3>
   <p>Lienken Tech is a company that combines technology and innovation. Our products include shock-absorbing materials and noise-reducing materials.
