--- a/desktop.html
+++ b/desktop.html
@@ -100,7 +100,7 @@ footer {
   
   <h3 id="material2">Noise-reducing materials</h3>
     
-    <h3 id="info"> Company Info.</h3>
+    <h3 id="about">About</h3>
   <p>Lienken Tech is a company that combines technology and innovation. Our products include shock-absorbing materials and noise-reducing materials.
   </article>
 </section>
