--- a/mobile.html
+++ b/mobile.html
@@ -45,7 +45,7 @@ footer {
      <p> <a href="https://www.youtube.com/watch?v=M88DidFeX38&t=3s">Shock absorbing materials video-2, Hitting a watermelon with a hammer doesn't break it.</a>
      <p><iframe width="280" height="158" src="https://www.youtube.com/embed/M88DidFeX38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-    <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8"><b>Shock absorbing materials video-3. In 2.0m drop test, there is no external damage to the phone.</b> </a>
+    <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8">Shock absorbing materials video-3. In 2.0m drop test, there is no external damage to the phone.</b> </a>
     <p> <iframe width="280" height="158" src="https://www.youtube.com/embed/1Bv1-nn_cd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
  
     <p>LIENKEN smart nano materials provide very thin and light soft shock absorbers.</p>
