--- a/mobile.html
+++ b/mobile.html
@@ -21,7 +21,13 @@ header {
   font-size: 20px; /* 28px */
   color: white;
 }
-
+  
+p {
+  /*font-family: arial; *//* times */
+  font-size: 15px;
+  /* color: white; */
+}
+  
 /* Create two columns/boxes that floats next to each other */
 
 /* Style the list inside the menu */
