--- a/mobile.html
+++ b/mobile.html
@@ -50,8 +50,8 @@ footer {
 
 <h5>Lienken Technology Corporation 靈感科技股份有限公司</h5>
 <h5 id="material" >Shock-absorbing materials</h5>
-     <p> <a href="https://www.youtube.com/watch?v=M88DidFeX38&t=3s">Video-2, Hitting a watermelon with a hammer doesn't break it.</a>
-     <p><iframe width="280" height="158" src="https://www.youtube.com/embed/M88DidFeX38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+     <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s">Video-1.</a>
+     <p><iframe width="280" height="158" src="https://www.youtube.com/embed/jhY9PQPmhwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8">Video-3. In 2.0m drop test, there is no external damage to the phone.</b> </a>
     <p> <iframe width="280" height="158" src="https://www.youtube.com/embed/1Bv1-nn_cd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
