--- a/desktop.html
+++ b/desktop.html
@@ -89,7 +89,7 @@ footer {
   
   <article>
 <h3 id="material" >Shock-absorbing materials</h3>
-     <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s">Shock absorbing materials video-1.</a>
+     <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s">Shock absorbing materials video-1. Finger covered with protective material is not injured by hitting with a hammer. </a>
      <p><iframe width="560" height="315" src="https://www.youtube.com/embed/jhY9PQPmhwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8"><b>Shock absorbing materials video-3. In 2.0m drop test, there is no external damage to the phone.</b> </a>
