--- a/mobile.html
+++ b/mobile.html
@@ -49,6 +49,12 @@ footer {
 <body>
 
 <h5>Lienken Technology Corporation 靈感科技股份有限公司</h5>
+<div class="menu">
+  <a href="#" class="active">Home</a>
+  <a href="#material">Products</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</div>
   <hr>
 <h5 id="material" >Shock-absorbing materials</h5>
      <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s">Video-1.</a>
@@ -64,9 +70,10 @@ footer {
   
   <h5 id="material2">Noise-reducing materials</h5>
     
-    <h5 id="about"> About</h5>
+  <h5 id="about"> About</h5>
   <p>Lienken Tech is a company that combines technology and innovation. Our products include shock-absorbing materials and noise-reducing materials.
- 
+
+ <h5 id="contact">Contact</h5>
 <footer>
   <p>Mr. Calvin Lin. E-mail: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a> TEL:+886-2-89706339 FAX:+886-2-89706162 Mobile:+886-982111037
     <p>Address: 7F., No.521, Xuecheng Rd., Shulin Dist., New Taipei City 23854, Taiwan (R.O.C.)
@@ -75,4 +82,3 @@ footer {
 
 </body>
 </html>
-
