--- a/mobile.html
+++ b/mobile.html
@@ -48,7 +48,7 @@ footer {
 </head>
 <body>
 
-<h5>Lienken Technology Corporation 靈感科技股份有限公司</h5>
+<h3>Lienken Technology Corporation 靈感科技股份有限公司</h3>
 <div class="menu">
   <a href="#" class="active">Home</a>
   <a href="#material">Products</a>
@@ -60,7 +60,7 @@ footer {
      <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s">Video-1.</a>
      <p><iframe width="280" height="158" src="https://www.youtube.com/embed/jhY9PQPmhwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-    <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8">Video-3. In 2.0m drop test, there is no external damage to the phone.</b> </a>
+    <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8">Video-3. In 2.0m drop test, there is no external damage to the phone. </a>
     <p> <iframe width="280" height="158" src="https://www.youtube.com/embed/1Bv1-nn_cd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
  
     <p>LIENKEN smart nano materials provide very thin and light soft shock absorbers.</p>
