--- a/mobile.html
+++ b/mobile.html
@@ -48,9 +48,9 @@ footer {
 </head>
 <body>
 
-<h3>Lienken Technology Corporation 靈感科技股份有限公司</h3>
+<h3 id="home">Lienken Technology Corporation 靈感科技股份有限公司</h3>
 <div class="menu">
-  <a href="#" class="active">Home</a>
+  <a href="#home" class="active">Home</a>
   <a href="#material">Products</a>
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
@@ -74,6 +74,11 @@ footer {
   <p>Lienken Tech is a company that combines technology and innovation. Our products include shock-absorbing materials and noise-reducing materials.
 
  <h5 id="contact">Contact</h5>
+  <div id="go-home">
+  <a href="#home">
+    <img src="house.png"/ width="40px">
+  </a>
+</div>
 <footer>
   <p>Mr. Calvin Lin. E-mail: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a> TEL:+886-2-89706339 FAX:+886-2-89706162 Mobile:+886-982111037
     <p>Address: 7F., No.521, Xuecheng Rd., Shulin Dist., New Taipei City 23854, Taiwan (R.O.C.)
