--- a/mobile.html
+++ b/mobile.html
@@ -4,7 +4,7 @@
 <title>Lienken Technology Corporation</title>
 <meta charset="utf-8">
 <meta name="description" content="Lienken Technology Corporation">
-<meta name="keywords" content="lienken, tech, material ">  
+<meta name="keywords" content="lienken, lienkentech, material ">  
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
