--- a/mobile.html
+++ b/mobile.html
@@ -3,7 +3,7 @@
 <head>
 <title>Lienken Technology Corporation</title>
 <meta charset="utf-8">
-<meta name="description" content="Lienken Technology Corporation">
+<meta name="description" content="Lienken Technology Corporation 靈感科技股份有限公司">
 <meta name="keywords" content="lienken, lienkentech, material ">  
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
