--- a/desktop.html
+++ b/desktop.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Lienken Technology Corporation</title>
 <meta charset="utf-8">
-<meta name="description" content="Lienken Technology Corporation 靈感科技股份有限公司">
+<meta name="description" content="Lienken Technology Corporation Shock-absorbing Material Noise-reducing Material Owner: Calvin Lin">
 <meta name="keywords" content="lienken, lienkentech, material ">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
