--- a/mobile.html
+++ b/mobile.html
@@ -73,6 +73,9 @@ footer {
   <a href="#home">
     <img src="house.png"/ width="40px">
   </a>
+ <a href="mailto:lienken168@gmail.com">
+    <img src="mail.png"/ width="45px">
+  </a>     
 </div>
 <footer>
   <p>Mr. Calvin Lin. E-mail: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a> TEL:+886-2-89706339 FAX:+886-2-89706162 Mobile:+886-982111037
