--- a/desktop.html
+++ b/desktop.html
@@ -4,7 +4,7 @@
 <title>Lienken Technology Corporation</title>
 <meta charset="utf-8">
 <meta name="description" content="Lienken Technology Corporation Shock-absorbing Material Noise-reducing Material Owner: Calvin Lin">
-<meta name="keywords" content="lienken, lienkentech, material ">
+<meta name="keywords" content="lienken, lienkentech, material ">  
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
@@ -20,79 +20,42 @@ header {
   background-color: #666;
   padding: 2px;
   text-align: center;
-  font-size: 28px;
+  font-size: 20px; /* 28px */
   color: white;
 }
-
+  
+ 
 /* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 30%;
-  height: 300px; /* only for demonstration, should be removed */
-  background: #ccc;
-  padding: 20px;
-}
 
 /* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  /*height: 300px;*/ /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section::after {
-  content: "";
-  display: table;
-  clear: both;
-}
 
 /* Style the footer */
 footer {
-  background-color: #555; /* #777; */
+  background-color: #777;
   padding: 10px;
   text-align: center;
   color: white;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
-  nav, article {
-    width: 100%;
-    height: auto;
-  }
-}
+
 </style>
 </head>
 <body>
 
-<h2>Lienken Technology Corporation 靈感科技股份有限公司</h2>
-<header>
-  <h3>Products</h3> 
-</header>
-
-<section>
-  <nav>
-    <ul>
-      <li><a href="#material">Shock-absorbing material</a></li>
-      <li><a href="#material2">Noise-reducing material</a></li>
-
-    </ul>
-  </nav>
-  
-  <article>
-<h3 id="material" >Shock-absorbing materials</h3>
-     <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s">Shock absorbing materials video-1. Finger covered with protective material is not injured by hitting with a hammer. </a>
+<h1 id="home">Lienken Technology Corporation 靈感科技股份有限公司</h1>
+<div class="menu">
+  <a href="#home" class="active">Home</a>
+  <a href="#material">Products</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</div>
+  <hr>
+<h2 id="material" >Shock-absorbing materials</h2>
+     <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s">Video-1.</a>
      <p><iframe width="560" height="315" src="https://www.youtube.com/embed/jhY9PQPmhwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-    <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8"><b>Shock absorbing materials video-3. In 2.0m drop test, there is no external damage to the phone.</b> </a>
+    <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8">Video-3. In 2.0m drop test, there is no external damage to the phone. </a>
     <p> <iframe width="560" height="315" src="https://www.youtube.com/embed/1Bv1-nn_cd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
  
     <p>LIENKEN smart nano materials provide very thin and light soft shock absorbers.</p>
@@ -100,15 +63,28 @@ footer {
     bicycle seat, acoustic and car electronics, etc.</p>
 <p>For inquiries and questions, please email: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a>
   
-  <h3 id="material2">Noise-reducing materials</h3>
+  <h2 id="material2">Noise-reducing materials</h2>
     
-    <h3 id="about">About</h3>
+  <h2 id="about"> About</h2>
   <p>Lienken Tech is a company that combines technology and innovation. Our products include shock-absorbing materials and noise-reducing materials.
-  </article>
-</section>
 
+ <h2 id="contact">Contact</h2>
+  <div id="go-home">
+  <a href="#home">
+    <img src="house.png"/ width="45px">
+  </a>
+ <a href="mailto:lienken168@gmail.com">
+    <img src="mail.png"/ width="45px">
+  </a>  
+ <a href="tel:+886-2-89706339">
+    <img src="tel.png"/ width="45px">
+  </a>  
+ <a href="tel:+886-982111037">
+    <img src="mobile.png"/ width="45px">
+  </a>      
+</div>
 <footer>
-  <p>Mr. Calvin Lin. E-mail: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a> TEL:+886-2-89706339 FAX:+886-2-89706162 Mobile:+886-982111037
+  <p>Mr. Calvin Lin. E-mail: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a> TEL:<a href="tel:+886-2-89706339">+886-2-89706339</a> FAX:+886-2-89706162 Mobile:TEL:<a href="tel:+886-982111037">+886-982111037</a>
     <p>Address: 7F., No.521, Xuecheng Rd., Shulin Dist., New Taipei City 23854, Taiwan (R.O.C.)
     <p>Copyright © 2009 Lienken Technology Corporation
 </footer>
