--- a/mobile.html
+++ b/mobile.html
@@ -52,10 +52,10 @@ footer {
 </div>
   <hr>
 <h4 id="material" >Shock-absorbing materials</h5>
-     <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s">Video-1.</a>
+  <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s"><b>Video-1.</b></a>
      <p><iframe width="280" height="158" src="https://www.youtube.com/embed/jhY9PQPmhwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-    <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8">Video-3. In 2.0m drop test, there is no external damage to the phone. </a>
+    <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8"><b>Video-3. In 2.0m drop test, there is no external damage to the phone.</b></a>
     <p> <iframe width="280" height="158" src="https://www.youtube.com/embed/1Bv1-nn_cd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
  
     <p>LIENKEN smart nano materials provide very thin and light soft shock absorbers.</p>
