--- a/desktop.html
+++ b/desktop.html
@@ -31,7 +31,7 @@ header {
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color: #555; /* #777;*/
   padding: 10px;
   text-align: center;
   color: white;
