--- a/mobile.html
+++ b/mobile.html
@@ -24,7 +24,11 @@ header {
   color: white;
 }
   
- 
+.pcmenu a{
+  background-color: blue;
+  color: white;
+  padding: 10px;
+} 
 /* Create two columns/boxes that floats next to each other */
 
 /* Style the list inside the menu */
@@ -44,7 +48,7 @@ footer {
 <body>
 
 <h4 id="home">Lienken Technology Corporation 靈感科技股份有限公司</h4>
-<div class="menu">
+<div class="pcmenu">
   <a href="#home" class="active">Home</a>
   <a href="#material">Products</a>
   <a href="#about">About</a>
