--- a/desktop.html
+++ b/desktop.html
@@ -35,10 +35,10 @@ header {
 
 /* Style the footer */
 footer {
-  background-color: #555; /* #777;*/
+  background-color: yellow; /*#555; #777;*/
   padding: 10px;
   text-align: center;
-  color: white;
+  /* color: white;*/ 
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
