--- a/mobile.html
+++ b/mobile.html
@@ -28,6 +28,7 @@ header {
   background-color: blue;
   color: white;
   padding: 10px;
+  text-decoration:none;
 } 
 /* Create two columns/boxes that floats next to each other */
 
