--- a/desktop.html
+++ b/desktop.html
@@ -66,7 +66,7 @@ footer {
 <p>For inquiries and questions, please email: <a href="mailto:sales@lienken.com">sales@lienken.com</a>
   
   <h2 id="material2">Smart Power Supply</h2>
-  <p><img src="LIENKEN POWER supply for twitter.jpg" alt="Power supply">
+  <p><img src="LIENKEN_POWER_SUPPLY.jpg" alt="Power supply">
     <p>We have developed the world’s first smart power supply, and it is patented. We are a technology company with a strong R&D and design team.
 
   <h2 id="about"> About</h2>
