--- a/desktop.html
+++ b/desktop.html
@@ -57,8 +57,8 @@ footer {
 </div>
   <hr>
 <h2 id="material" >Shock Absorbing materials</h2>
-  <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s"><b>Video-1.</b></a>
-     <p><iframe width="560" height="315" src="https://www.youtube.com/embed/jhY9PQPmhwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <p> <a href="https://www.youtube.com/watch?v=xaJU9zZEBfw"><b>Video-1.</b></a>
+     <p><iframe width="560" height="315" src="https://www.youtube.com/watch?v=xaJU9zZEBfw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
  
     <p>LIENKEN smart nano materials provide very thin and light soft shock absorbers.</p>
 <p>These materials can apply to ballistic vest, ballistic helmet, Military impact protection gear, Military knee and elbow pads, EV battery protector, smartphone case, sport pads, medical, defense, transportation safety, transportation, computers, automotives, insoles, helmet, bicycle seat, acoustic and car electronics.
