--- a/mobile.html
+++ b/mobile.html
@@ -3,8 +3,8 @@
 <head>
 <title>Lienken Technology Corporation</title>
 <meta charset="utf-8">
-<meta name="description" content="Lienken Technology Corporation Shock-absorbing Material Noise-reducing Material Owner: Calvin Lin">
-<meta name="keywords" content="lienken, lienkentech, material ">  
+<meta name="description" content="Lienken Technology Corporation Shock Absorbing Material Smart power supply Owner: Calvin Lin">
+<meta name="keywords" content="lienken, lienkentech, shock absorbing material, power supply ">  
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
@@ -29,7 +29,7 @@ header {
   color: white;
   padding: 10px;
   text-decoration:none;
-} 
+}  
 /* Create two columns/boxes that floats next to each other */
 
 /* Style the list inside the menu */
@@ -44,11 +44,27 @@ footer {
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 
+  .video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+    height: 0;
+    overflow: hidden;
+  }
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+
 </style>
 </head>
 <body>
 
-<h3 id="home">Lienken Technology Corporation 靈感科技股份有限公司</h3>
+<h1 id="home">Lienken Technology Corporation 靈感科技股份有限公司</h1>
 <div class="pcmenu">
   <a href="#home" class="active">Home</a>
   <a href="#material">Products</a>
@@ -56,29 +72,32 @@ footer {
   <a href="#contact">Contact</a>
 </div>
   <hr>
-<h3 id="material" >Shock-absorbing materials</h3>
-  <p> <a href="https://www.youtube.com/watch?v=jhY9PQPmhwE&t=27s"><b>Video-1.</b></a>
-     <p><iframe width="280" height="158" src="https://www.youtube.com/embed/jhY9PQPmhwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-    <p><a href="https://www.youtube.com/watch?v=1Bv1-nn_cd8"><b>Video-3. In 2.0m drop test, there is no external damage to the phone.</b></a>
-    <p> <iframe width="280" height="158" src="https://www.youtube.com/embed/1Bv1-nn_cd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
- 
+<h2 id="material" >Shock Absorbing materials</h2>
+  <p> <a href="https://www.youtube.com/watch?v=xaJU9zZEBfw"><b>Video-1.</b></a>
+<div class="video-container">
+  <iframe 
+    src="https://www.youtube.com/embed/xaJU9zZEBfw?si=gNOhRqObUnPyW2gr" 
+   title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+</iframe>
+</div> 
     <p>LIENKEN smart nano materials provide very thin and light soft shock absorbers.</p>
-<p>These materials can apply to EV battery protector, smartphone case, sport pads, medical, defense, transportation safety, transportation, computers, automotives, insoles, helmet, 
-    bicycle seat, acoustic and car electronics, etc.</p>
-<p>For inquiries and questions, please email: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a>
+<p>These materials can apply to ballistic vest, ballistic helmet, Military impact protection gear, Military knee and elbow pads, EV battery protector, smartphone case, sport pads, medical, defense, transportation safety, transportation, computers, automotives, insoles, helmet, bicycle seat, acoustic and car electronics.
+.</p>
+<p>For inquiries and questions, please email: <a href="mailto:sales@lienken.com">sales@lienken.com</a>
   
-  <h3 id="material2">Noise-reducing materials</h3>
-    
-  <h3 id="about"> About</h3>
-  <p>Lienken Tech is a company that combines technology and innovation. Our products include shock-absorbing materials and noise-reducing materials.
+  <h2 id="material2">Smart Power Supply</h2>
+  <p><img src="LIENKEN_POWER_SUPPLY.jpg" alt="Power supply">
+    <p>We have developed the world’s first smart power supply, and it is patented. We are a technology company with a strong R&D and design team.
 
- <h3 id="contact">Contact</h3>
+  <h2 id="about"> About</h2>
+  <p>Lienken Tech is a company that combines technology and innovation. Our products include shock absorbing materials and smart power supply.
+
+ <h2 id="contact">Contact</h2>
   <div id="go-home">
   <a href="#home">
     <img src="house.png"/ width="45px">
   </a>
- <a href="mailto:lienken168@gmail.com">
+ <a href="mailto:sales@lienken.com">
     <img src="mail.png"/ width="45px">
   </a>  
  <a href="tel:+886-2-89706339">
@@ -89,7 +108,7 @@ footer {
   </a>      
 </div>
 <footer>
-  <p>Mr. Calvin Lin. E-mail: <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a> TEL:<a href="tel:+886-2-89706339">+886-2-89706339</a> FAX:+886-2-89706162 Mobile:TEL:<a href="tel:+886-982111037">+886-982111037</a>
+  <p>E-mail: <a href="mailto:sales@lienken.com">sales@lienken.com</a> TEL:<a href="tel:+886-2-89706339">+886-2-89706339</a> Mobile:TEL:<a href="tel:+886-982111037">+886-982111037</a> FAX:+886-2-89706162 
     <p>Address: 7F., No.521, Xuecheng Rd., Shulin Dist., New Taipei City 23854, Taiwan (R.O.C.)
     <p>Copyright © 2009 Lienken Technology Corporation
 </footer>
