--- a/desktop.html
+++ b/desktop.html
@@ -88,7 +88,7 @@ footer {
   </a>      
 </div>
 <footer>
-  <p>E-mail: <a href="mailto:sales@lienken.com">sales@lienken.com</a> TEL:<a href="tel:+886-2-89706339">+886-2-89706339</a> Mobile:TEL:<a href="tel:+886-982111037">+886-982111037</a> FAX:+886-2-89706162 
+  <p>E-mail: <a href="mailto:sales@lienken.com">sales@lienken.com</a> TEL:<a href="tel:+886-2-89706339">+886-2-89706339</a> Mobile:<a href="tel:+886-982111037">+886-982111037</a> FAX:+886-2-89706162 
     <p>Address: 7F., No.521, Xuecheng Rd., Shulin Dist., New Taipei City 23854, Taiwan (R.O.C.)
     <p>Copyright © 2009 Lienken Technology Corporation
 </footer>
