--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         let isMobileDevice = regexp.test(details);
   
         if (isMobileDevice) {
-            location.href = "http://lienken.github.io/mobile.html";
+            location.href = "mobile.html";
         } else {
-		location.href = "http://lienken.github.io/desktop.html";
+		location.href = "desktop.html";
             /*document.write("You are using Desktop");*/
         }
     </script>
