--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         /* Creating a regular expression 
         containing some mobile devices keywords 
         to search it in details string*/
-	let regexp = /android|iphone|kindle/i;
+	let regexp = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini|kindle/i;
         /* let regexp = /android|iphone|kindle|ipad/i; */
   
         /* Using test() method to search regexp in details
