--- a/desktop.html
+++ b/desktop.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Lienken Technology Corporation</title>
+<title>LIENKEN Shock Absorbing Material </title>
 <meta charset="utf-8">
-<meta name="description" content="Lienken Technology Corporation Shock Absorbing Material Smart power supply Owner: Calvin Lin">
+<meta name="description" content="LIENKEN Shock Absorbing Material & Smart power supply Owner: Calvin Lin">
 <meta name="keywords" content="lienken, lienkentech, shock absorbing material, power supply ">  
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -48,7 +48,7 @@ footer {
 </head>
 <body>
 
-<h1 id="home">Lienken Technology Corporation 靈感科技股份有限公司</h1>
+<h1 id="home">LIENKEN</h1>
 <div class="pcmenu">
   <a href="#home" class="active">Home</a>
   <a href="#material">Products</a>
@@ -57,20 +57,19 @@ footer {
 </div>
   <hr>
 <h2 id="material" >Shock Absorbing materials</h2>
-  <p> <a href="https://www.youtube.com/watch?v=xaJU9zZEBfw"><b>Video-1.</b></a>
      <p><iframe width="560" height="315" src="https://www.youtube.com/embed/xaJU9zZEBfw?si=gNOhRqObUnPyW2gr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
  
     <p>LIENKEN smart nano materials provide very thin and light soft shock absorbers.</p>
-<p>These materials can apply to ballistic vest, ballistic helmet, Military impact protection gear, Military knee and elbow pads, EV battery protector, smartphone case, sport pads, medical, defense, transportation safety, transportation, computers, automotives, insoles, helmet, bicycle seat, acoustic and car electronics.
+<p>These materials can apply to ballistic vest, ballistic helmet, Military impact protection gear, Military knee and elbow pads, EV battery protector, Seismic protection for buildings and high-rise structures, smartphone case, sport pads, medical, defense, transportation safety, transportation, computers, automotives, insoles, helmet, bicycle seat, acoustic and car electronics.
 .</p>
 <p>For inquiries and questions, please email: <a href="mailto:sales@lienken.com">sales@lienken.com</a>
   
   <h2 id="material2">Smart Power Supply</h2>
   <p><img src="LIENKEN_POWER_SUPPLY.jpg" alt="Power supply">
-    <p>We have developed the world’s first smart power supply, and it is patented. We are a technology company with a strong R&D and design team.
+    <p>We have developed the world’s first smart power supply, and it is patented. We are a technology company with a strong R&D and design team. We accept power supply specification design and production.
 
   <h2 id="about"> About</h2>
-  <p>Lienken Tech is a company that combines technology and innovation. Our products include shock absorbing materials and smart power supply.
+  <p>LIENKEN TECH CORP. is a company that combines technology and innovation. Our products include shock absorbing materials and smart power supply.
 
  <h2 id="contact">Contact</h2>
   <div id="go-home">
@@ -89,9 +88,9 @@ footer {
 </div>
 <footer>
   <p>E-mail: <a href="mailto:sales@lienken.com">sales@lienken.com</a> , <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a>
-  <p> TEL:<a href="tel:+886-2-89706339">+886-2-89706339</a> Mobile:<a href="tel:+886-982111037">+886-982111037</a> FAX:+886-2-89706162 
+  <p> TEL:<a href="tel:+886-2-89706339">+886-2-89706339</a> Mobile:<a href="tel:+886-982111037">+886-982111037</a> 
     <p>Address: 7F., No.521, Xuecheng Rd., Shulin Dist., New Taipei City 23854, Taiwan (R.O.C.)
-    <p>Copyright © 2009 Lienken Technology Corporation
+    <p>Copyright © 2009 LIENKEN TECH CORP.
 </footer>
 
 </body>
