--- a/mobile.html
+++ b/mobile.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>LIENKEN Shock Absorbing Material </title>
+<title>LIENKEN Shock Absorbing Material& Smart Power Supply</title>
 <meta charset="utf-8">
-<meta name="description" content="LIENKEN Shock Absorbing Material & Smart power supply Owner: Calvin Lin">
-<meta name="keywords" content="lienken, lienkentech, shock absorbing material, power supply ">  
+<meta name="description" content="LIENKEN Shock Absorbing Material & Smart Power Supply Owner: Calvin Lin">
+<meta name="keywords" content="lienken, lienkentech, shock absorbing material, power supply">  
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
