--- a/desktop.html
+++ b/desktop.html
@@ -56,7 +56,7 @@ footer {
   <a href="#contact">Contact</a>
 </div>
   <hr>
-<h2 id="material" >Shock Absorbing materials</h2>
+<h2 id="material" >Shock Absorbing Materials</h2>
      <p><iframe width="560" height="315" src="https://www.youtube.com/embed/xaJU9zZEBfw?si=gNOhRqObUnPyW2gr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
  
     <p>LIENKEN smart nano materials provide very thin and light soft shock absorbers.</p>
@@ -88,7 +88,8 @@ footer {
 </div>
 <footer>
   <p>E-mail: <a href="mailto:sales@lienken.com">sales@lienken.com</a> , <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a>
-  <p> TEL:<a href="tel:+886-2-89706339">+886-2-89706339</a> Mobile:<a href="tel:+886-982111037">+886-982111037</a> 
+  <p> TEL: <a href="tel:+886-2-89706339">+886-2-89706339</a> 
+  <p> Mobile: <a href="tel:+886-982111037">+886-982111037</a> 
     <p>Address: 7F., No.521, Xuecheng Rd., Shulin Dist., New Taipei City 23854, Taiwan (R.O.C.)
     <p>Copyright © 2009 LIENKEN TECH CORP.
 </footer>
