--- a/mobile.html
+++ b/mobile.html
@@ -56,7 +56,7 @@ footer {
   <a href="#contact">Contact</a>
 </div>
   <hr>
-<h2 id="material" >Shock Absorbing materials</h2>
+<h2 id="material" >Shock Absorbing Materials</h2>
   <p> <a href="https://www.youtube.com/watch?v=xaJU9zZEBfw"><b>Video-1.</b></a>
 <div class="video-container">
   <iframe 
@@ -93,7 +93,8 @@ footer {
 </div>
 <footer>
   <p>E-mail: <a href="mailto:sales@lienken.com">sales@lienken.com</a> , <a href="mailto:lienken168@gmail.com">lienken168@gmail.com</a>
-  <p> TEL:<a href="tel:+886-2-89706339">+886-2-89706339</a> Mobile:<a href="tel:+886-982111037">+886-982111037</a> 
+  <p> TEL: <a href="tel:+886-2-89706339">+886-2-89706339</a>
+  <p> Mobile: <a href="tel:+886-982111037">+886-982111037</a> 
     <p>Address: 7F., No.521, Xuecheng Rd., Shulin Dist., New Taipei City 23854, Taiwan (R.O.C.)
     <p>Copyright © 2009 LIENKEN TECH CORP.
 </footer>
